implement jpa and refactory