@@ -13,7 +13,7 @@ import java.util.*;
 
 public final class FederatedIdentityIdTokenCustomizer implements OAuth2TokenCustomizer<JwtEncodingContext> {
 
-	private static final Set<String> ID_TOKEN_CLAIMS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+	private static final Set<String> ID_TOKEN_CLAIMS = Set.of(
 			IdTokenClaimNames.ISS,
 			IdTokenClaimNames.SUB,
 			IdTokenClaimNames.AUD,
@@ -26,7 +26,7 @@ public final class FederatedIdentityIdTokenCustomizer implements OAuth2TokenCust
 			IdTokenClaimNames.AZP,
 			IdTokenClaimNames.AT_HASH,
 			IdTokenClaimNames.C_HASH
-	)));
+	);
 
 	@Override
 	public void customize(JwtEncodingContext context) {
